--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 allow from all
 Options +Indexes
 RewriteEngine on
-RewriteRule ^(.*)\.html$ index.php?c=$1
+RewriteRule ^index.html$ show_page.php?page=index&content=home  [L]
+RewriteRule ^(.+)\.html$ show_page.php?page=index&content=$1_page   [L]
