- set default sort order on datatable to ascending

--- a/controls.yml
+++ b/controls.yml
@@ -31,6 +31,8 @@ datatable:
   load:
     - call: datatable::read($key)
   position: top
+  sort_order: asc
+  filter: all
   # table-wide actions
   export:
     name: Export to Excel
