--created a field button that does not validate field when sending data to backend

--- a/fields.yml
+++ b/fields.yml
@@ -87,6 +87,10 @@ popup:
   action:
     dialog:  
     
+query:
+  type: button
+  action:
+    call: $class::$invoker($key)
     
 submit:
   type: button
