--- a/fields.yml
+++ b/fields.yml
@@ -9,7 +9,7 @@ cellphone:
   valid: national_tel
 
 change_password: 
-  desc: Change your password
+  desc: Change your current password
   access: reg
   action:
     #call: /user/start_reset_pw
@@ -73,6 +73,7 @@ latitude:
   valid: /^\d+\.\d+$/
 
 login:
+  desc: Log in
   access: public
   audit: $email
   action:
@@ -80,6 +81,7 @@ login:
 
 
 logout:
+  desc: Log out
   access: reg 
   audit: 
   action:
