--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 allow from all
 Options +Indexes
 RewriteEngine on
-RewriteRule ^index.html$ index.php  [L]
-RewriteRule ^(.+)\.html$ index.php?page=index&content=$1 [L]
+RewriteRule ^index.html$ index.php?path=index&content=home  [L]
+RewriteRule ^([\w\/]+)(?:<(.*))?$ index.php?path=index&content=$1&$2 [L]
