--- a/error_page.yml
+++ b/error_page.yml
@@ -2,11 +2,11 @@
 error_page: 
   type: labelled_input_page
   name: Unexpected Error
-  width: 400
+  width: 550
   style:
     color: rgb(20,60,90)
   desc: |
-    An unexpected error occurred while processing your results. 
+    An unexpected error occurred while processing your results. <br>
     Please notify the system administrator of this incident.
   actions:
     - home
