- Added requested_role to view_profile

--- a/user.yml
+++ b/user.yml
@@ -229,9 +229,10 @@ profile:
     - cellphone
     - email_address
     - role: { attr: disabled }
+    - requested_role: { attr: disabled }
   values:
     - sql: |
-        select title,first_name,last_name,cellphone,email_address, group_concat(r.name) role
+        select title,first_name,last_name,cellphone,email_address, group_concat(r.name) role, requested_role
         from user u left join user_role ur on u.id = ur.user_id
         left join role r on r.code = ur.role_code
         where u.id = $uid
