fixed the modify SQL statement

--- a/user.yml
+++ b/user.yml
@@ -212,7 +212,7 @@ modify:
     - sql: |
         select title,first_name,last_name,cellphone,email_address,r.name role  
         from user u left join user_role ur on u.id = ur.user_id
-        left joint role r on r.code = ur.role_code
+        left join role r on r.code = ur.role_code
         where id = $key
   actions:
     - update
